<resources>
    <string name="app_name">Just Java</string>
    <string name="word_quantity">Quantity</string>
    <string name="decrease">-</string>
    <string name="quantity_number">0</string>
    <string name="increase">+</string>
    <string name="word_order_summary">Order Summary</string>
    <string name="totalCost">$0</string>
    <string name="order">order</string>

    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whippedCream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="coffeeBeans">java beans</string>

    <string name="action_settings">Settings</string>
    <string name="action_settings_contact">Contact</string>
    <string name="action_settings_refresh">Refresh</string>
</resources>
