<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.vizcarradeveloper.justjava.MainActivity">


        <ImageView
            android:id="@+id/img_java"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:contentDescription="@string/coffeeBeans"
            android:scaleType="centerCrop"
            android:src="@drawable/java" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingTop="8dp">

            <EditText
                android:id="@+id/name_edit_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <TextView
                android:id="@+id/text_view_toppings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toppings" />

            <CheckBox
                android:id="@+id/checkbox_toppings1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/whippedCream" />

            <CheckBox
                android:id="@+id/checkbox_toppings2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chocolate" />

            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/word_quantity"
                android:textAllCaps="true" />

            <LinearLayout
                android:id="@+id/row_buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/decrease"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:onClick="decrement"
                    android:text="@string/decrease" />

                <TextView
                    android:id="@+id/quantity_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/quantity_number"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/increase"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:onClick="increment"
                    android:text="@string/increase" />
            </LinearLayout>

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/word_order_summary" />

            <TextView
                android:id="@+id/order_summary_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/totalCost" />

            <Button
                android:id="@+id/order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="submitOrder"
                android:text="@string/order" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>

